[fix][broker] Allow empty replication clusters for namespace policies
This change removes validation that prevented setting empty replication clusters
for namespace policies. Previously, the API would reject empty cluster lists,
but this is a valid configuration for disabling inter-cluster replication while
maintaining topic accessibility within individual clusters.

Changes:
- Remove CollectionUtils.isEmpty(clusterIds) validation in NamespacesBase.java
- Remove empty cluster validation in PersistentTopicsBase.java for topic-level policies
- Add comprehensive test coverage for empty replication clusters in V1 and V2 namespace APIs
- Verify bidirectional functionality (empty ↔ non-empty cluster configurations)
- Ensure no auto-population occurs when explicitly setting empty clusters